--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,31 @@
+[workspace]
+members = [".", "entity", "migration"]
+
 [package]
 name = "rusty_rest"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.dev]
+opt-level = 0
+
+[profile.release]
+opt-level = 3
 
 [dependencies]
-actix-web = "4"
-serde = { version = "1.0", features = ["derive"] }
-# serde_json is just for the example, not required in general
+# internal dependencies
+entity = { path = "entity" }
+migration = { path = "migration" }
+
+# external dependencies
+actix-web = "4.5.1"
+serde = "1.0.196"
 serde_json = "1.0"
 dotenv = "0.15.0"
-log = "0.4.14"
-env_logger = "0.9.0"
-futures-util = "0.3"
-mongodb = "2.6.0"
-bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
-tokio = { version = "1", features = ["full"] }
-chrono = "0.4" # Used for setting DateTimes
-lazy_static = "1.4.0"
+log = "0.4.20"
+env_logger = "0.11.1"
+futures-util = "0.3.30"
 redis = { version = "0.23.1", features = [ "cluster", "tokio-comp"] }
-thiserror = "1.0"
-
-
+thiserror = "1.0.56"
+sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
+validator = { version = "0.16", features = ["derive"] }
