config worker like celery python

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 opt-level = 0
 
 [profile.release]
-opt-level = 3
+opt-level = 1
 
 [dependencies]
 # internal dependencies
@@ -29,3 +29,7 @@ redis = { version = "0.23.1", features = [ "cluster", "tokio-comp"] }
 thiserror = "1.0.56"
 sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
 validator = { version = "0.16", features = ["derive"] }
+celery = "0.5.5"
+tokio = "1.36.0"
+structopt = "0.3.26"
+lazy_static = "1.4.0"
