--- a/infrastructure/Cargo.toml
+++ b/infrastructure/Cargo.toml
@@ -16,7 +16,10 @@ redis = { version = "0.24.0", features = ["tokio-comp"] }
 thiserror = "1.0.56"
 sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
 validator = { version = "0.16", features = ["derive"] }
-tokio = "1.36.0"
+tokio = { version = "1.36.0", features = ["full"] }
 lazy_static = "1.4.0"
 bcrypt = "0.15"
 jsonwebtoken = "9"
+aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
+aws-sdk-s3 = "1.41.0"
+aws-smithy-types = "1.2.0"
